--- a/src/test/resources/test.properties
+++ b/src/test/resources/test.properties
@@ -29,6 +29,7 @@ drivetrain.constants.coupling.gear.ratio=3.5714285714285716
 drivetrain.constants.wheel.radius.inches=2.05
 drivetrain.constants.slip.current.amps=120.0
 drivetrain.constants.free.speed.at.12.volts.mps=3
+drivetrain.constants.max.mps=3
 drivetrain.constants.max.rads.per.s=3.14159
 drivetrain.constants.steer.feedback.type=FusedCANcoder
 
