--- a/src/test/resources/test.properties
+++ b/src/test/resources/test.properties
@@ -29,6 +29,8 @@ drivetrain.constants.coupling.gear.ratio=3.5714285714285716
 drivetrain.constants.wheel.radius.inches=2.05
 drivetrain.constants.slip.current.amps=120.0
 drivetrain.constants.free.speed.at.12.volts.mps=3
+drivetrain.constants.max.mps=3
+drivetrain.constants.max.rads.per.s=3.14159
 drivetrain.constants.steer.feedback.type=FusedCANcoder
 
 ### Drive Motors
@@ -108,3 +110,9 @@ drivetrain.modules.back.right.encoder.offset.rotations=-0.456787109375
 drivetrain.modules.back.right.encoder.inverted=false
 drivetrain.modules.back.right.location.x.inches=-11.375
 drivetrain.modules.back.right.location.y.inches=-11.375
+
+# Controllers
+controllers.rumble.intensity=0.1
+controllers.driver.port=0
+controllers.driver.translational.deadband=0.1
+controllers.driver.rotational.deadband=0.1
