Rename drivetrain to use subsystem suffix

--- a/src/main/deploy/practice-robot.properties
+++ b/src/main/deploy/practice-robot.properties
@@ -2,18 +2,18 @@
 meta.mode=practice
 
 # General PID Parameters (translational in meters, rotational in degrees)
-pid.translational.tolerance=0.05
+pid.translational.tolerance=0.025
 pid.translational.max.v=2.0
 pid.translational.max.a=1.0
 pid.translational.kp=3
-pid.translational.ki=.5
-pid.translational.kd=.1
+pid.translational.ki=0
+pid.translational.kd=0
 pid.rotational.tolerance=3.0
 pid.rotational.max.v=180.0
 pid.rotational.max.a=90.0
-pid.rotational.kp=3
-pid.rotational.ki=2
-pid.rotational.kd=.1
+pid.rotational.kp=.1
+pid.rotational.ki=0
+pid.rotational.kd=0
 
 # Simulation
 simulation.signal.update.hz=1000
