--- a/src/test/resources/test.properties
+++ b/src/test/resources/test.properties
@@ -116,3 +116,11 @@ controllers.rumble.intensity=0.1
 controllers.driver.port=0
 controllers.driver.translational.deadband=0.1
 controllers.driver.rotational.deadband=0.1
+controllers.operator.port=1
+
+# Roller
+roller.motor.port=41
+roller.motor.intake.speed=-1
+roller.motor.output.speed=0.3
+roller.motor.idle.speed=0.0
+roller.led.port=9
